hphp/hack/test/enum_atom/typing/atom_wrong_place.php
<?hh
<<file:__EnableUnstableFeatures('enum_atom')>>

#top_level_atom;


function f() : void {
  $x = #atom_alone_is_erro;
  $y = # not_ok;
}
